--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
+    "dompurify": "^2.4.0",
+    "marked": "^4.1.0",
     "next": "12.3.0",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
