--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
-    "dompurify": "^2.4.0",
+    "isomorphic-dompurify": "^0.22.0",
     "marked": "^4.1.0",
     "next": "12.3.0",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "^8.0.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "autoprefixer": "^10.4.12",
